--- a/catering.html
+++ b/catering.html
@@ -142,8 +142,9 @@
                         <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Contact Us</h2>
                         <ul class="text-gray-500 font-medium">
                             <li class="mb-4">
-                                <a href="#"
-                                    class="hover:underline ">cateringkuind@gmail.com</a>
+                                <a href="#" class="hover:underline md:inline-block">
+                                    cateringkuind<br class="sm:hidden ">@gmail.com
+                                </a>
                             </li>
                             <li>
                                 <a href="#" class="hover:underline">Phone Call:+62 813-7012-3860</a>
