--- a/tentang.html
+++ b/tentang.html
@@ -321,8 +321,11 @@
                         <h3 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Contact Us</h3>
                         <ul class="text-gray-500 font-medium">
                             <li class="mb-4">
-                                <a href="#"
-                                    class="hover:underline ">cateringkuind@gmail.com</a>
+                                <p class="text-wrap">
+                                    <a href="#" class="hover:underline md:inline-block">
+                                        cateringkuind<br class="sm:hidden ">@gmail.com
+                                    </a>
+                                </p>
                             </li>
                             <li>
                                 <a href="#" class="hover:underline">Phone Call:+62 813-7012-3860</a>
