--- a/tentang.html
+++ b/tentang.html
@@ -57,11 +57,15 @@
         <section class="flex flex-col gap-3 md:flex-row pt-[50px] justify-between mb-10">
             <div class="text-center mb-[20px]">
                 <h1 class="text-4xl lg:text-5xl font-bold mb-5">About Us</h1>
-                <p class="w-[75%] mb-5 mx-auto">Lorem Ipsum is simply dummy text of the printing and typesetting
-                    industry.
-                    Lorem
-                    Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown</p>
+                <p class="w-[75%] mb-5 mx-auto">Kami adalah sebuah startup yang didedikasikan untuk 
+                    menyajikan pengalaman katering yang tak terlupakan bagi pelanggan kami. 
+                    Di CateringKu,kami berkomitmen untuk menyediakan layanan katering yang tak hanya lezat, 
+                    tetapi juga menghadirkan kehangatan dan keceriaan.
+                </p>  
+                
+                <p class="font-bold">
+                    "Kami percaya bahwa CateringKu merupakan solusi simple untuk kebahagiaan perutmu."
+                </p>    
             </div>
 
         </section>
@@ -71,19 +75,16 @@
             <div class="px-5 grid gap-5 md:grid-cols-2">
                 <div class="border p-6 rounded-lg">
                     <span class="mb-5 font-medium text-amber-500">How It Started</span>
-                    <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-10">Our Dream is Global Learning
-                        Transformation
+                    <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-10">Our Dream for CateringKu
                     </h3>
 
-                    <p class="text-balance">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea corrupti est
-                        eligendi eveniet?
-                        Veritatis
-                        cum quis incidunt distinctio quam beatae officiis ullam, eaque debitis illum voluptates!
-                        Consequatur
-                        error ipsam sit! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, unde quia.
-                        Tempore iure perspiciatis modi, maxime doloribus veritatis voluptatibus recusandae iusto
-                        obcaecati
-                        fugiat dicta corrupti molestias, earum dolores dolorem ex?</p>
+                    <p class="text-justify">mimpi kami adalah 
+                        menghadirkan beragam pilihan makanan katering dari sejumlah vendor terpercaya. 
+                        Kami bertujuan untuk memberikan manfaat yang signifikan kepada masyarakat, 
+                        terutama para pelajar dan profesional di lingkungan kantor. Dengan menyediakan 
+                        berbagai opsi makanan dari berbagai vendor katering, kami berkomitmen untuk memberikan 
+                        pengalaman yang kaya dan memuaskan kepada pelanggan kami, memastikan bahwa 
+                        mereka memiliki kebebasan dalam memilih dari variasi makanan yang tersedia.</p>
                 </div>
 
                 <div class="flex flex-col gap-y-5">
@@ -92,18 +93,18 @@
 
                     <div class="p-6 grid grid-cols-2 md:grid-cols-1 lg:grid-cols-2 gap-5 border rounded-lg">
                         <div class="border p-5 rounded-lg bg-gray-100">
-                            <h3 class="text-lg md:text-2xl font-bold ">2022</h3>
+                            <h3 class="text-lg md:text-2xl font-bold ">2024</h3>
                             <span class="font-medium text-gray-600 text-sm md:text-base">Tanggal Berdiri</span>
                         </div>
 
                         <div class="border p-5 rounded-lg bg-gray-100">
-                            <h3 class="text-lg md:text-2xl font-bold ">20</h3>
+                            <h3 class="text-lg md:text-2xl font-bold ">3</h3>
                             <span class="font-medium text-gray-600 text-sm md:text-base">Jumlah Vendor</span>
                         </div>
 
                         <div class="border p-5 rounded-lg bg-gray-100">
                             <h3 class="text-lg md:text-2xl font-bold ">5</h3>
-                            <span class="font-medium text-gray-600 text-sm md:text-base">Jumlah Kuli</span>
+                            <span class="font-medium text-gray-600 text-sm md:text-base">Jumlah Kontributor</span>
                         </div>
 
                         <div class="border p-5 rounded-lg bg-gray-100">
@@ -117,30 +118,23 @@
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-10">What We Serve?
                     </h3>
 
-                    <p class="text-balance">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea corrupti est
-                        eligendi eveniet?
-                        Veritatis
-                        cum quis incidunt distinctio quam beatae officiis ullam, eaque debitis illum voluptates!
-                        Consequatur
-                        error ipsam sit! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, unde quia.
-                        Tempore iure perspiciatis modi, maxime doloribus veritatis voluptatibus recusandae iusto
-                        obcaecati
-                        fugiat dicta corrupti molestias, earum dolores dolorem ex?</p>
+                    <p class="text-justify">Kami menyediakan beragam variasi makanan dari sejumlah vendor berbeda, 
+                        memastikan bahwa pelanggan kami memiliki akses ke pilihan yang luas dan berkualitas. 
+                        Dengan keragaman menu yang ditawarkan, kami memungkinkan pelanggan untuk menemukan 
+                        makanan yang sesuai dengan selera dan preferensi mereka tanpa batasan. 
+                        Kami berharap bahwa platform kami mampu memberikan kenyamanan serta kepuasan bagi para pelanggan kami.</p>
                 </div>
 
                 <div class="border p-6 rounded-lg ">
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-10">What We Do?
                     </h3>
 
-                    <p class="text-balance">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea corrupti est
-                        eligendi eveniet?
-                        Veritatis
-                        cum quis incidunt distinctio quam beatae officiis ullam, eaque debitis illum voluptates!
-                        Consequatur
-                        error ipsam sit! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, unde quia.
-                        Tempore iure perspiciatis modi, maxime doloribus veritatis voluptatibus recusandae iusto
-                        obcaecati
-                        fugiat dicta corrupti molestias, earum dolores dolorem ex?</p>
+                    <p class="text-justify">Kami memotret dan mempromosikan produk katering dari berbagai mitra kami, 
+                        sambil memberikan layanan kepada pelanggan yang tertarik untuk memesan makanan dari 
+                        vendor-vendor yang kami tawarkan. Kami bekerja sama dengan berbagai penyedia layanan 
+                        katering untuk menampilkan beragam pilihan makanan kepada para pelanggan kami. 
+                        Kami berusaha menjadi penghubung antara pelanggan yang mencari makanan 
+                        berkualitas dan vendor yang menawarkan produk terbaik mereka.</p>
                 </div>
             </div>
 
@@ -148,15 +142,14 @@
                 <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-10">Our Vision
                 </h3>
 
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea corrupti est
-                    eligendi eveniet?
-                    Veritatis
-                    cum quis incidunt distinctio quam beatae officiis ullam, eaque debitis illum voluptates!
-                    Consequatur
-                    error ipsam sit! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, unde quia.
-                    Tempore iure perspiciatis modi, maxime doloribus veritatis voluptatibus recusandae iusto
-                    obcaecati
-                    fugiat dicta corrupti molestias, earum dolores dolorem ex?</p>
+                <p class="text-justify">Visi kami adalah menjadi platform terkemuka yang memudahkan akses pelanggan 
+                    terhadap beragam pilihan makanan berkualitas dari berbagai vendor katering. 
+                    Kami bertekad untuk menjadi mitra yang handal bagi pelanggan, 
+                    menyediakan layanan yang tidak hanya mempromosikan produk-produk katering yang unggul, 
+                    tetapi juga memberikan dukungan dalam proses pemesanan dan pengiriman di 
+                    masa yang akan mendatang. Dengan visi ini, kami berupaya menjadi jembatan 
+                    antara pelanggan yang mencari pengalaman kuliner yang memuaskan dan vendor 
+                    katering yang memiliki reputasi baik dalam menyajikan produk berkualitas.</p>
             </div>
         </section>
 
@@ -167,68 +160,58 @@
 
             <div class="px-5 grid gap-5 md:grid-cols-2">
                 <div class="border p-6 rounded-lg">
-                    <span class="mb-5 font-medium text-amber-500">Our Coder</span>
+                    <span class="mb-5 font-medium text-amber-500">Our Developer</span>
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Willson Andrew
                     </h3>
 
-                    <p class="text-balance mb-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-                        corrupti
-                        est
-                        eligendi eveniet?
-                        Veritatis
-                        cum quis incidunt distinctio quam beatae officiis ullam, eaque debitis illum voluptates!
-                        Consequatur.</p>
+                    <p class="text-justify mb-5">Bertanggung jawab dalam mengelola dan mengawasi 
+                        semua aspek teknologi yang terkait dengan startup. selain itu, 
+                        berperan dalam pengembangan dan implementasi strategi teknologi 
+                        yang diperlukan untuk mencapai tujuan. </p>
 
                     <img src="img/carousel/carousel1.jpg"
                         class=" rounded-lg w-full h-[320px] object-cover object-center" alt="meet-our-team">
                 </div>
 
                 <div class="border p-6 rounded-lg">
-                    <span class="mb-5 font-medium text-amber-500">Our Coder</span>
+                    <span class="mb-5 font-medium text-amber-500">Our Developer</span>
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Joyce
                     </h3>
 
-                    <p class="text-balance mb-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-                        corrupti
-                        est
-                        eligendi eveniet?
-                        Veritatis
-                        cum quis incidunt distinctio quam beatae officiis ullam, eaque debitis illum voluptates!
-                        Consequatur.</p>
+                    <p class="text-justify mb-5">berperan dalam memastikan setiap langkah yang diambil 
+                        dalam pengembangan teknologi mendukung visi dan misi perusahaan. berkomitmen 
+                        untuk memastikan bahwa startup kami tetap relevan dan kompetitif dalam era 
+                        digital yang terus berkembang.</p>
 
                     <img src="img/carousel/carousel1.jpg"
                         class=" rounded-lg w-full h-[320px] object-cover object-center" alt="meet-our-team">
                 </div>
 
                 <div class="border p-6 rounded-lg">
-                    <span class="mb-5 font-medium text-amber-500">Our Coder</span>
+                    <span class="mb-5 font-medium text-amber-500">Our Developer</span>
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Angelina Rianti
                     </h3>
 
-                    <p class="text-balance mb-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-                        corrupti
-                        est
-                        eligendi eveniet?
-                        Veritatis
-                        cum quis incidunt distinctio quam beatae officiis ullam, eaque debitis illum voluptates!
-                        Consequatur.</p>
+                    <p class="text-justify mb-5">bertanggung jawab dalam merancang dan mengembangkan 
+                        tampilan website yang menarik serta responsif, yang mampu meningkatkan interaksi. 
+                        Selain itu, berperan dalam mengembangkan berbagai fungsionalitas website sesuai 
+                        dengan kebutuhan perusahaan serta memastikan konsistensi desain di seluruh 
+                        halaman website. </p>
 
                     <img src="img/carousel/carousel1.jpg"
                         class=" rounded-lg w-full h-[320px] object-cover object-center" alt="meet-our-team">
                 </div>
 
                 <div class="border p-6 rounded-lg">
-                    <span class="mb-5 font-medium text-amber-500">Our Coder</span>
+                    <span class="mb-5 font-medium text-amber-500">Our Marketing</span>
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Clarita
                     </h3>
 
-                    <p class="text-balance mb-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-                        corrupti
-                        est
-                        eligendi eveniet?
-                        Veritatis
-                        cum quis incidunt distinctio quam beatae officiis ullam, eaque debitis illum voluptates!
-                        Consequatur.</p>
+                    <p class="text-justify mb-5">bertanggung jawab dalam pengembangan dan 
+                        pelaksanaan strategi pemasaran yang efektif, pengelolaan merek, 
+                        dan promosi perusahaan. Di samping itu, juga berperan dalam pengelolaan 
+                        dan penjadwalan aktivitas di media sosial. Tidak hanya itu, tetapi juga membangun 
+                        hubungan yang kuat dengan pelanggan, dan mendukung pertumbuhan bisnis secara menyeluruh.</p>
 
                     <img src="img/carousel/carousel1.jpg"
                         class=" rounded-lg w-full h-[320px] object-cover object-center" alt="meet-our-team">
@@ -237,17 +220,16 @@
 
             <div class="p-5 md:w-[51%] mx-auto">
                 <div class="border p-6 rounded-lg">
-                    <span class="mb-5 font-medium text-amber-500">Coder</span>
+                    <span class="mb-5 font-medium text-amber-500">Our Designer</span>
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Jefrry Arispratama
                     </h3>
 
-                    <p class="text-balance mb-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-                        corrupti
-                        est
-                        eligendi eveniet?
-                        Veritatis
-                        cum quis incidunt distinctio quam beatae officiis ullam, eaque debitis illum voluptates!
-                        Consequatur.</p>
+                    <p class="text-justify mb-5">bertanggung jawab dalam merancang brosur dan postingan 
+                        terkait media sosial untuk mempromosikan produk atau layanan perusahaan, 
+                        mendesain template sosial media yang menarik dan sesuai dengan identitas 
+                        merek perusahaan. serta juga, menciptakan konten visual yang menarik dan 
+                        efektif untuk memperkuat citra merek serta meningkatkan interaksi dengan pelanggan.
+                    </p>
 
                     <img src="img/carousel/carousel1.jpg"
                         class=" rounded-lg w-full h-[320px] object-cover object-center" alt="meet-our-team">
