--- a/tentang.html
+++ b/tentang.html
@@ -57,15 +57,15 @@
         <section class="flex flex-col gap-3 md:flex-row pt-[50px] justify-between mb-10">
             <div class="text-center mb-[20px]">
                 <h1 class="text-4xl lg:text-5xl font-bold mb-5">About Us</h1>
-                <p class="w-[75%] mb-5 mx-auto">Kami adalah sebuah startup yang didedikasikan untuk 
-                    menyajikan pengalaman katering yang tak terlupakan bagi pelanggan kami. 
-                    Di CateringKu,kami berkomitmen untuk menyediakan layanan katering yang tak hanya lezat, 
+                <p class="w-[75%] mb-5 mx-auto">Kami adalah sebuah startup yang didedikasikan untuk
+                    menyajikan pengalaman katering yang tak terlupakan bagi pelanggan kami.
+                    Di CateringKu,kami berkomitmen untuk menyediakan layanan katering yang tak hanya lezat,
                     tetapi juga menghadirkan kehangatan dan keceriaan.
-                </p>  
-                
+                </p>
+
                 <p class="font-bold">
                     "Kami percaya bahwa CateringKu merupakan solusi simple untuk kebahagiaan perutmu."
-                </p>    
+                </p>
             </div>
 
         </section>
@@ -78,12 +78,12 @@
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-10">Our Dream for CateringKu
                     </h3>
 
-                    <p class="text-justify">mimpi kami adalah 
-                        menghadirkan beragam pilihan makanan katering dari sejumlah vendor terpercaya. 
-                        Kami bertujuan untuk memberikan manfaat yang signifikan kepada masyarakat, 
-                        terutama para pelajar dan profesional di lingkungan kantor. Dengan menyediakan 
-                        berbagai opsi makanan dari berbagai vendor katering, kami berkomitmen untuk memberikan 
-                        pengalaman yang kaya dan memuaskan kepada pelanggan kami, memastikan bahwa 
+                    <p class="text-justify">mimpi kami adalah
+                        menghadirkan beragam pilihan makanan katering dari sejumlah vendor terpercaya.
+                        Kami bertujuan untuk memberikan manfaat yang signifikan kepada masyarakat,
+                        terutama para pelajar dan profesional di lingkungan kantor. Dengan menyediakan
+                        berbagai opsi makanan dari berbagai vendor katering, kami berkomitmen untuk memberikan
+                        pengalaman yang kaya dan memuaskan kepada pelanggan kami, memastikan bahwa
                         mereka memiliki kebebasan dalam memilih dari variasi makanan yang tersedia.</p>
                 </div>
 
@@ -118,22 +118,23 @@
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-10">What We Serve?
                     </h3>
 
-                    <p class="text-justify">Kami menyediakan beragam variasi makanan dari sejumlah vendor berbeda, 
-                        memastikan bahwa pelanggan kami memiliki akses ke pilihan yang luas dan berkualitas. 
-                        Dengan keragaman menu yang ditawarkan, kami memungkinkan pelanggan untuk menemukan 
-                        makanan yang sesuai dengan selera dan preferensi mereka tanpa batasan. 
-                        Kami berharap bahwa platform kami mampu memberikan kenyamanan serta kepuasan bagi para pelanggan kami.</p>
+                    <p class="text-justify">Kami menyediakan beragam variasi makanan dari sejumlah vendor berbeda,
+                        memastikan bahwa pelanggan kami memiliki akses ke pilihan yang luas dan berkualitas.
+                        Dengan keragaman menu yang ditawarkan, kami memungkinkan pelanggan untuk menemukan
+                        makanan yang sesuai dengan selera dan preferensi mereka tanpa batasan.
+                        Kami berharap bahwa platform kami mampu memberikan kenyamanan serta kepuasan bagi para pelanggan
+                        kami.</p>
                 </div>
 
                 <div class="border p-6 rounded-lg ">
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-10">What We Do?
                     </h3>
 
-                    <p class="text-justify">Kami memotret dan mempromosikan produk katering dari berbagai mitra kami, 
-                        sambil memberikan layanan kepada pelanggan yang tertarik untuk memesan makanan dari 
-                        vendor-vendor yang kami tawarkan. Kami bekerja sama dengan berbagai penyedia layanan 
-                        katering untuk menampilkan beragam pilihan makanan kepada para pelanggan kami. 
-                        Kami berusaha menjadi penghubung antara pelanggan yang mencari makanan 
+                    <p class="text-justify">Kami memotret dan mempromosikan produk katering dari berbagai mitra kami,
+                        sambil memberikan layanan kepada pelanggan yang tertarik untuk memesan makanan dari
+                        vendor-vendor yang kami tawarkan. Kami bekerja sama dengan berbagai penyedia layanan
+                        katering untuk menampilkan beragam pilihan makanan kepada para pelanggan kami.
+                        Kami berusaha menjadi penghubung antara pelanggan yang mencari makanan
                         berkualitas dan vendor yang menawarkan produk terbaik mereka.</p>
                 </div>
             </div>
@@ -142,13 +143,13 @@
                 <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-10">Our Vision
                 </h3>
 
-                <p class="text-justify">Visi kami adalah menjadi platform terkemuka yang memudahkan akses pelanggan 
-                    terhadap beragam pilihan makanan berkualitas dari berbagai vendor katering. 
-                    Kami bertekad untuk menjadi mitra yang handal bagi pelanggan, 
-                    menyediakan layanan yang tidak hanya mempromosikan produk-produk katering yang unggul, 
-                    tetapi juga memberikan dukungan dalam proses pemesanan dan pengiriman di 
-                    masa yang akan mendatang. Dengan visi ini, kami berupaya menjadi jembatan 
-                    antara pelanggan yang mencari pengalaman kuliner yang memuaskan dan vendor 
+                <p class="text-justify">Visi kami adalah menjadi platform terkemuka yang memudahkan akses pelanggan
+                    terhadap beragam pilihan makanan berkualitas dari berbagai vendor katering.
+                    Kami bertekad untuk menjadi mitra yang handal bagi pelanggan,
+                    menyediakan layanan yang tidak hanya mempromosikan produk-produk katering yang unggul,
+                    tetapi juga memberikan dukungan dalam proses pemesanan dan pengiriman di
+                    masa yang akan mendatang. Dengan visi ini, kami berupaya menjadi jembatan
+                    antara pelanggan yang mencari pengalaman kuliner yang memuaskan dan vendor
                     katering yang memiliki reputasi baik dalam menyajikan produk berkualitas.</p>
             </div>
         </section>
@@ -164,9 +165,9 @@
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Willson Andrew
                     </h3>
 
-                    <p class="text-justify mb-5">Bertanggung jawab dalam mengelola dan mengawasi 
-                        semua aspek teknologi yang terkait dengan startup. selain itu, 
-                        berperan dalam pengembangan dan implementasi strategi teknologi 
+                    <p class="text-justify mb-5">Bertanggung jawab dalam mengelola dan mengawasi
+                        semua aspek teknologi yang terkait dengan startup. selain itu,
+                        berperan dalam pengembangan dan implementasi strategi teknologi
                         yang diperlukan untuk mencapai tujuan. </p>
 
                     <img src="img/carousel/carousel1.jpg"
@@ -178,9 +179,9 @@
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Joyce
                     </h3>
 
-                    <p class="text-justify mb-5">berperan dalam memastikan setiap langkah yang diambil 
-                        dalam pengembangan teknologi mendukung visi dan misi perusahaan. berkomitmen 
-                        untuk memastikan bahwa startup kami tetap relevan dan kompetitif dalam era 
+                    <p class="text-justify mb-5">berperan dalam memastikan setiap langkah yang diambil
+                        dalam pengembangan teknologi mendukung visi dan misi perusahaan. berkomitmen
+                        untuk memastikan bahwa startup kami tetap relevan dan kompetitif dalam era
                         digital yang terus berkembang.</p>
 
                     <img src="img/carousel/carousel1.jpg"
@@ -192,10 +193,10 @@
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Angelina Rianti
                     </h3>
 
-                    <p class="text-justify mb-5">bertanggung jawab dalam merancang dan mengembangkan 
-                        tampilan website yang menarik serta responsif, yang mampu meningkatkan interaksi. 
-                        Selain itu, berperan dalam mengembangkan berbagai fungsionalitas website sesuai 
-                        dengan kebutuhan perusahaan serta memastikan konsistensi desain di seluruh 
+                    <p class="text-justify mb-5">bertanggung jawab dalam merancang dan mengembangkan
+                        tampilan website yang menarik serta responsif, yang mampu meningkatkan interaksi.
+                        Selain itu, berperan dalam mengembangkan berbagai fungsionalitas website sesuai
+                        dengan kebutuhan perusahaan serta memastikan konsistensi desain di seluruh
                         halaman website. </p>
 
                     <img src="img/carousel/carousel1.jpg"
@@ -207,10 +208,10 @@
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Clarita
                     </h3>
 
-                    <p class="text-justify mb-5">bertanggung jawab dalam pengembangan dan 
-                        pelaksanaan strategi pemasaran yang efektif, pengelolaan merek, 
-                        dan promosi perusahaan. Di samping itu, juga berperan dalam pengelolaan 
-                        dan penjadwalan aktivitas di media sosial. Tidak hanya itu, tetapi juga membangun 
+                    <p class="text-justify mb-5">bertanggung jawab dalam pengembangan dan
+                        pelaksanaan strategi pemasaran yang efektif, pengelolaan merek,
+                        dan promosi perusahaan. Di samping itu, juga berperan dalam pengelolaan
+                        dan penjadwalan aktivitas di media sosial. Tidak hanya itu, tetapi juga membangun
                         hubungan yang kuat dengan pelanggan, dan mendukung pertumbuhan bisnis secara menyeluruh.</p>
 
                     <img src="img/carousel/carousel1.jpg"
@@ -224,10 +225,10 @@
                     <h3 class="text-4xl lg:text-5xl font-bold text-balance mb-5">Jefrry Arispratama
                     </h3>
 
-                    <p class="text-justify mb-5">bertanggung jawab dalam merancang brosur dan postingan 
-                        terkait media sosial untuk mempromosikan produk atau layanan perusahaan, 
-                        mendesain template sosial media yang menarik dan sesuai dengan identitas 
-                        merek perusahaan. serta juga, menciptakan konten visual yang menarik dan 
+                    <p class="text-justify mb-5">bertanggung jawab dalam merancang brosur dan postingan
+                        terkait media sosial untuk mempromosikan produk atau layanan perusahaan,
+                        mendesain template sosial media yang menarik dan sesuai dengan identitas
+                        merek perusahaan. serta juga, menciptakan konten visual yang menarik dan
                         efektif untuk memperkuat citra merek serta meningkatkan interaksi dengan pelanggan.
                     </p>
 
@@ -248,14 +249,16 @@
                 <div class="mb-5">
                     <label for="nama" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nama</label>
                     <input type="text" id="nama"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5" required>
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
+                        required>
                 </div>
 
                 <div class="mb-5">
                     <label for="email"
                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
                     <input type="text" id="email"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 " required>
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 "
+                        required>
                 </div>
 
 
@@ -279,23 +282,24 @@
         <div class="mx-auto w-full max-w-screen-lg p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div class="mb-10 md:mb-0 md:w-[40%]">
-                    <a href="https://flowbite.com/" class="flex flex-col ">
-                        <span class="text-2xl lg:text-4xl font-semibold whitespace-nowrap mb-3">CateringKu</span>
-                        <p class="text-sm">Solusi Simple untuk Kebahagiaan Perutmu</p>
-                    </a>
+                    <p class="flex flex-col ">
+                        <span
+                            class="text-2xl lg:text-4xl font-semibold whitespace-nowrap mb-3 text-amber-500">CateringKu</span>
+                    <p class="text-sm">Solusi Simple untuk Kebahagiaan Perutmu</p>
+                    </p>
                 </div>
                 <div class="grid grid-cols-2 gap-8 sm:gap-6">
                     <div>
                         <h3 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Pages</h3>
                         <ul class="text-gray-500 font-medium">
                             <li class="mb-4">
-                                <a href="https://flowbite.com/" class="hover:underline">Home</a>
+                                <a href="index.html" class="hover:underline">Home</a>
                             </li>
                             <li class="mb-4">
-                                <a href="https://tailwindcss.com/" class="hover:underline">Catering</a>
+                                <a href="vendor.html" class="hover:underline">Catering</a>
                             </li>
                             <li class="mb-4">
-                                <a href="https://tailwindcss.com/" class="hover:underline">Tentang</a>
+                                <a href="tentang.html" class="hover:underline">Tentang</a>
                             </li>
                         </ul>
                     </div>
@@ -303,14 +307,13 @@
                         <h3 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Contact Us</h3>
                         <ul class="text-gray-500 font-medium">
                             <li class="mb-4">
-                                <p class="text-wrap">
-                                    <a href="#" class="hover:underline md:inline-block">
-                                        cateringkuind<br class="sm:hidden ">@gmail.com
-                                    </a>
-                                </p>
+                                <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=cateringkuind@gmail.com&tf=1"
+                                    class="hover:underline md:inline-block">
+                                    cateringkuind<br class="sm:hidden ">@gmail.com
+                                </a>
                             </li>
                             <li>
-                                <a href="#" class="hover:underline">Phone Call:+62 813-7012-3860</a>
+                                <p>Phone Call:+62 813-7012-3860</p>
                             </li>
                         </ul>
                     </div>
