--- a/payment.html
+++ b/payment.html
@@ -99,24 +99,24 @@
         <div class="mx-auto w-full max-w-screen-lg p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div class="mb-10 md:mb-0 md:w-[40%]">
-                    <a href="https://flowbite.com/" class="flex flex-col">
+                    <p class="flex flex-col">
                         <span
                             class="text-2xl lg:text-4xl font-semibold whitespace-nowrap mb-3 text-amber-500">CateringKu</span>
-                        <p class="text-sm">Solusi Simple untuk Kebahagiaan Perutmu</p>
-                    </a>
+                    <p class="text-sm">Solusi Simple untuk Kebahagiaan Perutmu</p>
+                    </p>
                 </div>
                 <div class="grid grid-cols-2 gap-8 sm:gap-6">
                     <div>
                         <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Pages</h2>
                         <ul class="text-gray-500 font-medium">
                             <li class="mb-4">
-                                <a href="https://flowbite.com/" class="hover:underline">Home</a>
+                                <a href="index.html" class="hover:underline">Home</a>
                             </li>
                             <li class="mb-4">
-                                <a href="https://tailwindcss.com/" class="hover:underline">Catering</a>
+                                <a href="vendor.html" class="hover:underline">Catering</a>
                             </li>
                             <li class="mb-4">
-                                <a href="https://tailwindcss.com/" class="hover:underline">Tentang</a>
+                                <a href="tentang.html" class="hover:underline">Tentang</a>
                             </li>
                         </ul>
                     </div>
@@ -124,12 +124,13 @@
                         <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Contact Us</h2>
                         <ul class="text-gray-500 font-medium">
                             <li class="mb-4">
-                                <a href="#" class="hover:underline md:inline-block">
+                                <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=cateringkuind@gmail.com&tf=1"
+                                    class="hover:underline md:inline-block">
                                     cateringkuind<br class="sm:hidden ">@gmail.com
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="hover:underline">Phone Call:+62 813-7012-3860</a>
+                                <p>Phone Call:+62 813-7012-3860</p>
                             </li>
                         </ul>
                     </div>
